# MarcketPlace

./: .gitignore  README.md  manage.py  pyproject.toml
marcketplace/: asgi.py  settings.py  urls.py  wsgi.py
